refs #5406 make sure it shows an error message in dimension, do  not show an error if request was aborted and align the text left

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -208,13 +208,13 @@
   cursor: wait;
 }
 
-.widgetLoading, .widgetLoadingError {
+.widgetLoading, .widgetLoadingError, .dimensionLoadingError {
   padding: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 10pt;
 }
 
-.widgetLoadingError {
+.widgetLoadingError, .dimensionLoadingError {
   color: @theme-color-brand;
 }
 
